# KumaFramework

./: .gitignore  README.md  README_ZH.md  README_ch.md  build.gradle  migrate_to_common.py  settings.gradle
kuma-ai-framework/kuma-ai-agent/kuma-agent/: .gitignore  README.md  README_ZH.md  config.yaml  config.yaml.example  langgraph.json  pyproject.toml  ruff.toml
kuma-ai-framework/kuma-ai-agent/kuma-agent/app/: demo.py  grpc_server.py  server.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/app/channels/: __init__.py  feishu.py  grpc_server.py  manager.py  message_bus.py  service.py  store.py  telegram.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/app/gateway/: app.py  path_utils.py  server.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/app/grpc/: grpc_server.py  servicer.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/docs/: Base.txt  Demo.txt  b.txt  error.txt  grpc_java.md
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/: __init__.py  client.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/agents/: __init__.py  agent.py  prompt.py  state.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/config/: __init__.py  agents_config.py  app_config.py  checkpointer_config.py  config.py  memory_config.py  paths.py  sandbox_config.py  skills_config.py  tool_config.py  tracing_config.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/grpc/: servicer.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/mcp/: cache.py  client.py  oauth.py  tools.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/middlewares/: base.py  log_middleware.py  title_middleware.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/models/: claude_provider.py  factory.py  openai_codex_provider.py  patched_minimax.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/reflection/: resolvers.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/sandbox/: middleware.py  sandbox_provider.py  tools.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/skills/: loader.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/kuma_agent/subagents/: executor.py  registry.py
kuma-ai-framework/kuma-ai-agent/kuma-agent/proto/: kuma_agent.proto
kuma-ai-framework/kuma-ai-agent/kuma-agent/scripts/: gen_proto.py
(+10562 files in other folders)
