[project]
name = "kuma-agent"
version = "0.1.0"
description = "A simple LangGraph-based AI agent demo, referencing deer-flow/backend/packages/harness patterns"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=1.3.5",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2.0"]
anthropic = ["langchain-anthropic>=0.3.0"]
all = ["kuma-agent[openai,anthropic]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/kuma_agent"]

[tool.ruff]
line-length = 120
